[gd_scene load_steps=6 format=3 uid="uid://c3pwmk7q5vlyw"]

[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="1_eba41"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t87yy"]
bg_color = Color(0.247059, 0.247059, 0.247059, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rb4j6"]
bg_color = Color(0.91631, 0.0820443, 1.92523e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c5gn"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xal7n"]
bg_color = Color(1, 1, 1, 1)

[node name="GUI" type="CanvasLayer"]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_right = 156.0
offset_bottom = 22.0
theme_override_styles/background = SubResource("StyleBoxFlat_t87yy")
theme_override_styles/fill = SubResource("StyleBoxFlat_rb4j6")
value = 50.0
show_percentage = false
script = ExtResource("1_eba41")

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_3c5gn")
theme_override_styles/fill = SubResource("StyleBoxFlat_xal7n")
value = 80.0
show_percentage = false

[node name="HP_text" type="Label" parent="HealthBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DmgTimer" type="Timer" parent="HealthBar"]
wait_time = 0.425
one_shot = true

[connection signal="timeout" from="HealthBar/DmgTimer" to="HealthBar" method="_on_timer_timeout"]
